k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: constellation
  labels:
    name: constellation
    environment: production
